clang/test/BSC/Negative/NullabilityCheck/pass_nullable/pass_nullable.cbs
// RUN: %clang_cc1 -verify %s

_Safe void foo1(int *_Borrow a);
_Safe void test1(void) {
    int a = 10;
    int *_Borrow p1 = &_Mut a;
    foo1(p1);
    int *_Borrow _Nullable p2 = &_Mut a;
    foo1(p2);
    int *_Borrow _Nullable p3 = nullptr;
    foo1(p3);            // expected-error{{cannot pass nullable pointer argument}}
    foo1(&_Mut a);
    foo1(nullptr);       // expected-error{{cannot pass nullable pointer argument}}
}
